samples/_failures_safe/1761423452_cae8ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b880ecf1.c: In function ‘main’:
./samples/SAFE/__tmp_b880ecf1.c:163:42: error: expected ‘)’ at end of input
  163 |     printf("Tokens (%zu):\n", token_count
      |           ~                              ^
      |                                          )
./samples/SAFE/__tmp_b880ecf1.c:163:5: error: expected declaration or statement at end of input
  163 |     printf("Tokens (%zu):\n", token_count
      |     ^~~~~~
